Fix spacing between posts navigation and footer.

--- a/style.scss
+++ b/style.scss
@@ -727,6 +727,7 @@ ol.comment-list {
    Paging navigation
    ========================================================================== */
 .paging-navigation {
+	overflow: hidden;
 	.infinity-success & {
 		display: none;
 	}
